<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <!-- Muestra si el Bluetooth se puede activar o no  -->
    <TextView
        android:id="@+id/statusBluetoothTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#000"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <!-- Bluetooth icon(on/off) -->
    <ImageView
        android:id="@+id/bluetoothIv"
        android:layout_width="100dp"
        android:layout_height="200dp"

        android:contentDescription="@string/bl_image_description" />

    <!-- Activar bluetooth button -->
    <Button
        android:id="@+id/onBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:text="@string/button_bl_on" />

    <!-- Desactivar bluetooth button -->
    <Button
        android:id="@+id/offBtn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:text="@string/button_bl_off" />
    <!-- Dispositivos reconocidos button-->
    <Button
        android:id="@+id/discoverableBtn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:text="@string/button_busca_dispositivos" />
    <!-- Obtiene la lista de dispositvos emparejados-->
    <Button
        android:id="@+id/pairedBtn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:text="@string/button_paired" />

    <!--Muestra los dispositivos emparejados -->
    <TextView
        android:id="@+id/pairedTv"
        android:minWidth="200dp"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />
</LinearLayout>
